:sparkles: auth selesai, regis, login, & logout. :art: wilayah untuk user & pasien.
